--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "@soda/soda-asset": "workspace:^0.0.1",
+    "@soda/soda-core": "workspace:^0.0.1",
     "@soda/soda-mp-sdk": "workspace:^0.0.1",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
